# Autoclip

./: .env.example  .gitignore  .watch.env.example  LICENSE  README.md  SECURITY_NOTES.md  auto-clip-tips.html  auto-clip.config.json  auto_clip_tips_server.py  autoclip.sh  build_auto_clip_tips_from_page.sh  build_auto_clip_tips_video.sh  datenschutzerklaerung.html  fahrzeugdaten.txt  fetch_data.sh  generate_sales_text.sh  impressum.html  index.html  pyproject.toml  run.sh  setup.sh  start_auto_clip_tips.sh
.github/workflows/: ci.yml
Nexora/metadata/: 22222_metadata.json
Vehicle-Equipment/: 12346.txt  12347.txt  12348.txt
clippilot/.codex-plugin/: plugin.json
clippilot/hooks/: hooks.json  onActivate.js
clippilot/skills/dailycheck/: SKILL.md
examples/: README.md  job-beispiel.json
examples/frames/10001/: frame_0001.ppm  frame_0002.ppm  frame_0003.ppm
ops/start/: render_once.sh
pipeline/: .gitignore  AGENTS.md  README.md  autoclip  autoclip_ui.py  beschreibung.txt  config.sh  run.sh  start
pipeline/Output/: demo.webm
pipeline/Vehicle-Equipment/: 12345.txt  12349.txt
pipeline/legacy/misc/: setup_auto_fax_dryrun_example.txt
pipeline/legacy/placeholders/: generate_tts.sh
pipeline/ops/: README.md
pipeline/ops/deploy/: bundle.sh  preflight.sh
pipeline/ops/maintenance/: healthcheck.sh  tidy.sh
scripts/: publish.sh  run_once.sh  watch.sh
site/: index.html
site/assets/: app.js  styles.css
src/auto_clip/: cli.py  config.py  fs_utils.py  logging_utils.py  models.py  pipeline.py  publish.py  qa.py
tests/: test_models.py  test_publish.py
(+10 files in other folders)
