[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-clip"
version = "0.1.0"
description = "Saubere lokale Video-Pipeline mit kanonischem Metadatenvertrag und deterministischem Public-Bundle."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
auto-clip = "auto_clip.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
